--- a/index.css
+++ b/index.css
@@ -3,18 +3,30 @@ body{
     color : white;
     font-family:  Arial, Helvetica, sans-serif
 }
-ul{
+ul h1{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     list-style-type: none;
     align-items: center;
     padding: 16px;
-    font-size: 25px;
+    font-size: 35px;
 }
-
+h1{
+    display:  flex;
+    justify-content: space-around;
+}
+h2{
+    display:  flex ;
+    justify-content: space-around;
+    padding: 16px;
+}
 
 a{
     color:white;
+}
+h3{
+    display: flex;
+    
 }
 
 header img{
