--- a/index.css
+++ b/index.css
@@ -1,30 +1,78 @@
 body{
-    background-color: black;
+    
     color : white;
-    font-family:  Arial, Helvetica, sans-serif
+    font-family:  Arial, Helvetica, sans-serif;
+    
+  
 }
-ul h1{
+body.dark{
+background-color:black ;
+
+}
+.trilho.dark{
+    background-color: #c3c3c3;
+}
+
+.trilho.dark .indicador{
+    left: 43px;
+    background-color: #fff;
+
+
+}
+
+ul {
     display: flex;
-    justify-content: space-around;
-    list-style-type: none;
+    justify-content: space-between;
     align-items: center;
     padding: 16px;
-    font-size: 35px;
+    font-size: 30px;
+    transition: .5s;
 }
+
+div.trilho{
+    width: 80px;
+    height: 38px;
+    background-color: #4d4d4d;
+    border-radius:  150px;
+    cursor: pointer;
+    position: absolute;
+
+    
+
+
+}
+
+
+.trilho .indicador{
+    width: 35px;
+    height: 36px;
+    background-color: #000;
+    border-radius: 50%;
+    transform: scale(.8);
+    left: 0;
+    position: absolute;
+    transition: .5s;
+
+
+}
+
 h1{
+    color:  black;
     display:  flex;
     justify-content: space-around;
 }
 h2{
+    color:  black;
     display:  flex ;
     justify-content: space-around;
     padding: 16px;
 }
 
 a{
-    color:white;
+    color:black;
 }
 h3{
+    color:  black;
     display: flex;
     
 }
@@ -58,7 +106,37 @@ footer a{
 }
 
 h4{
+    color:  black;
     display: flex;
     justify-content: space-around;
     font-size: 25px;
 }
+p{
+    color:  black;
+    font-size: 20px;
+}
+img a{
+    display: flex;
+    justify-content:left;
+    border-radius: 50px ;
+    border: color, red;
+}
+body.dark h1{
+    color: #fff;
+}
+body.dark h2{
+    color: #fff
+}
+body.dark h3{
+    color: #fff;
+}
+body.dark h4{
+    color: #fff;
+}
+body.dark p{
+    color: #fff;
+}
+body.dark a{
+    color: #fff;
+}
+
