--- a/index.css
+++ b/index.css
@@ -29,7 +29,17 @@ ul {
     transition: .5s;
 }
 
+
+ul.h5{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 16px;
+    font-size: 30px;
+}
+
 div.trilho{
+    top: 40px;
     width: 80px;
     height: 38px;
     background-color: #4d4d4d;
@@ -111,6 +121,12 @@ h4{
     justify-content: space-around;
     font-size: 25px;
 }
+h5{
+    color:  black;
+    display: flex;
+    justify-content: space-around;
+    
+}
 p{
     color:  black;
     font-size: 20px;
@@ -138,5 +154,12 @@ body.dark p{
 }
 body.dark a{
     color: #fff;
+}
+body.dark h5{
+    color: #fff
+}
+
+div.contatos{
+    cursor: pointer;
 }
 
